--- a/styles.css
+++ b/styles.css
@@ -169,6 +169,7 @@ section {
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  flex: 0 1 33%;
 }
 
 .card-section .card i {
@@ -181,8 +182,8 @@ section {
   margin: 1em 0;
   display: flex;
   flex-wrap: wrap;
-  align-items: center;
   justify-content: center;
+  align-items: center;
 }
 
 .cards p {
