--- a/styles.css
+++ b/styles.css
@@ -21,6 +21,10 @@
   box-sizing: border-box;
 }
 
+html {
+  scroll-behavior: smooth;
+}
+
 body {
   background-color: var(--background);
   height: 100vh;
@@ -48,10 +52,27 @@ a {
 
 .navbar {
   display: flex;
+  align-items: center;
   justify-content: space-between;
+  width: 100%;
   padding: 2em;
   background-color: var(--background);
-  
+  /* position: fixed; */
+  top: 0;
+  left: 0;
+  z-index: 100;
+  transition: all 0.6s;
+}
+
+.sticky {
+  background-color: var(--white);
+  padding: 1.8em 2em;
+  position: fixed;
+  transition: all 0.6s;
+}
+
+.sticky ul li a {
+  color: var(--background);
 }
 
 .navbar .nav-links ul {
@@ -84,22 +105,37 @@ a {
   padding-bottom: 0.1em;
 }
 
-.contact {
-  display: flex;
-  justify-content: center;
-  margin: 3em auto;
-  width: 200px;
-  font-weight: bolder;
-  font-size: 1.15rem;
+.button-container {
+  background-color: var(--red);
+  display: inline-block;
+  margin-top: 2em;
+  border-top-right-radius: 20px;
+  border-bottom-left-radius: 20px;
+  cursor: pointer;
 }
 
-.contact i {
-  margin-right: 0.5em;
-  color: var(--red);
+.button a {
+  color: var(--white);
 }
+
+.button {
+  padding: 10px 15px;
+  font-size: 1.1rem;
+}
+
+.button i {
+  margin-right: 5px;
+}
+
+
 
 section {
   padding: 4em 2em;
+  position: relative;
+}
+
+section#home {
+  padding: 1em 0;
 }
 
 .about {
@@ -115,7 +151,7 @@ section {
 }
 
 .about-title-big {
-  font-size: 6rem;
+  font-size: 4.8rem;
   color: var(--red);
   z-index: 6;
   overflow: hidden;
@@ -148,7 +184,6 @@ section {
 .card-section h2 {
   text-align: center;
   font-size: 2rem;
-  
 }
 
 .card-section p {
@@ -169,7 +204,7 @@ section {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  flex: 1 1 32%;
+  flex: 0 1 auto;
 }
 
 .card-section .card i {
@@ -192,7 +227,7 @@ section {
 }
 
 .social-section, .social-links {
-  margin-top: 3em;
+  margin-top: 2em;
   font-size: 25px;
   display: flex;
   flex-direction: row;
@@ -209,6 +244,10 @@ section {
   height: 50px;
 }
 
+.social-links i {
+  color: var(--white);
+}
+
 .github {
   background-color: var(--background);
 }
@@ -221,3 +260,204 @@ section {
   background-color: #DE1b85;
 }
 
+.portfolio {
+  background-color: var(--background);
+}
+
+.portfolio-titles {
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.portfolio-title-big {
+  font-size: 4.8rem;
+  color: var(--red);
+  z-index: 6;
+  overflow: hidden;
+  position: absolute;
+  opacity: 5%;
+}
+
+.portfolio-title-small {
+  color: var(--white);
+  z-index: 7;
+  position: absolute;
+  font-size: 3rem;
+  border-bottom: 2px solid var(--red);
+}
+
+.loading {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 4em;
+  font-size: 2rem;
+  color: var(--white);
+}
+
+@-webkit-keyframes opacity {
+  0% {
+    filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=100);
+    opacity: 1;
+  }
+  100% {
+    filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=0);
+    opacity: 0;
+  }
+}
+
+@-moz-keyframes opacity {
+  0% {
+    filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=100);
+    opacity: 1;
+  }
+
+  100% {
+    filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=0);
+    opacity: 0;
+  }
+}
+
+@-webkit-keyframes opacity {
+  0% {
+    filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=100);
+    opacity: 1;
+  }
+  100% {
+    filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=0);
+    opacity: 0;
+  }
+}
+
+@-moz-keyframes opacity {
+  0% {
+    filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=100);
+    opacity: 1;
+  }
+  100% {
+    filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=0);
+    opacity: 0;
+  }
+}
+
+@-o-keyframes opacity {
+  0% {
+    filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=100);
+    opacity: 1;
+  }
+  100% {
+    filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=0);
+    opacity: 0;
+  }
+}
+
+@keyframes opacity {
+  0% {
+    filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=100);
+    opacity: 1;
+  }
+  100% {
+    filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=0);
+    opacity: 0;
+  }
+}
+.loading span {
+  -webkit-animation-name: opacity;
+  -webkit-animation-duration: 1s;
+  -webkit-animation-iteration-count: infinite;
+  -moz-animation-name: opacity;
+  -moz-animation-duration: 1s;
+  -moz-animation-iteration-count: infinite;
+  -ms-animation-name: opacity;
+  -ms-animation-duration: 1s;
+  -ms-animation-iteration-count: infinite;
+  color: var(--red);
+  margin-left: 3px;
+}
+.loading span:nth-child(2) {
+  -webkit-animation-delay: 100ms;
+  -moz-animation-delay: 100ms;
+  -ms-animation-delay: 100ms;
+  -o-animation-delay: 100ms;
+  animation-delay: 100ms;
+}
+.loading span:nth-child(3) {
+  -webkit-animation-delay: 300ms;
+  -moz-animation-delay: 300ms;
+  -ms-animation-delay: 300ms;
+  -o-animation-delay: 300ms;
+  animation-delay: 300ms;
+}
+
+.contact-section {
+  background-color: var(--white);
+  color: var(--background);
+  width: 100%;
+}
+
+.contact-titles {
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.contact-title-big {
+  font-size: 4.8rem;
+  color: var(--red);
+  z-index: 6;
+  overflow: hidden;
+  position: absolute;
+  opacity: 5%;
+}
+
+.contact-title-small {
+  z-index: 7;
+  position: absolute;
+  font-size: 3rem;
+  border-bottom: 2px solid var(--red);
+}
+
+.contact-section form {
+  margin-top: 4em;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.contact-content {
+  margin-top: 4em;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+}
+
+.contact-content h2 {
+  margin-top: 2em;
+  font-size: 1rem;
+  text-align: center;
+}
+
+.contact-content span {
+  font-style: italic;
+  color: var(--red);
+  font-weight: bolder;
+}
+
+.contact-content .email {
+  border-bottom: 2px solid var(--red);
+  cursor: pointer;
+}
+
+.footer-content{
+  margin: 2em 2em;
+  padding-bottom: 2em;
+  color: var(--white);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
