--- a/styles.css
+++ b/styles.css
@@ -271,14 +271,14 @@ section#home {
   justify-content: center;
 }
 
-.portfolio-title-big {
-  font-size: 2.8rem;
+/* .portfolio-title-big {
+  font-size: 2rem;
   color: var(--red);
   z-index: 6;
   overflow: hidden;
   position: absolute;
   opacity: 5%;
-}
+} */
 
 .portfolio-title-small {
   color: var(--white);
@@ -404,14 +404,14 @@ section#home {
   justify-content: center;
 }
 
-.contact-title-big {
+/* .contact-title-big {
   font-size: 3.2rem;
   color: var(--red);
   z-index: 6;
   overflow: hidden;
   position: absolute;
   opacity: 5%;
-}
+} */
 
 .contact-title-small {
   z-index: 7;
