--- a/styles.css
+++ b/styles.css
@@ -27,7 +27,7 @@ html {
 
 body {
   background-color: var(--background);
-  height: 100vh;
+  /* height: 100vh; */
   font-family: var(--lato);
 }
 
@@ -62,6 +62,7 @@ a {
   left: 0;
   z-index: 100;
   transition: all 0.6s;
+  height: 8vh;
 }
 
 .sticky {
@@ -88,6 +89,8 @@ a {
   color: var(--white);
   text-align: center;
   padding: 3em;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .hero .first-hero-text {
@@ -130,7 +133,7 @@ a {
 
 
 section {
-  padding: 4em 2em;
+  padding: 7em 2em;
   position: relative;
 }
 
@@ -226,26 +229,40 @@ section#home {
   text-align: center;
 }
 
-.social-section, .social-links {
-  margin-top: 2em;
-  font-size: 25px;
+ .social-links ul {
   display: flex;
-  flex-direction: row;
-  cursor: pointer;
-  align-items: center;
-  justify-content: center;
+  position: absolute;
+  top: 90%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
 
-.social-links {
-  margin: 10px;
+.social-links ul li {
+  list-style: none;
+}
+
+.social-links ul li a {
+  width: 80px;
+  height: 80px;
+  text-align: center;
+  line-height: 70px;
+  font-size: 35px;
+  margin: 0 10px;
+  display: block;
+  border-radius: 50%;
+  position: relative;
+  overflow: hidden;
+  z-index: 1;
+}
+
+.social-links ul li a .icon {
+  position: relative;
+  transition: .5s;
+  z-index: 3;
+  padding: 10px;
   border-radius: 50%;
   color: var(--white);
-  width: 50px;
-  height: 50px;
-}
-
-.social-links i {
-  color: var(--white);
+  
 }
 
 .github {
@@ -455,11 +472,197 @@ section#home {
 }
 
 .footer-content{
-  margin: 2em 2em;
-  padding-bottom: 2em;
+  margin: 1em 1em;
+  padding-bottom: 1em;
   color: var(--white);
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
+}
+
+@media only screen and (min-width: 800px){
+  .card-section .card {
+    flex: 0 0 25%;
+  }
+
+  .hero h1 {
+    max-width: 500px;
+    margin: 0 auto;
+  }
+
+  .about-title-big {
+    font-size: 6rem;
+    opacity: 7%;
+  }
+
+  .about-section {
+    max-width: 650px;
+    margin: 4.5em auto 3em;
+    font-size: 1.2rem;
+  }
+
+  .portfolio-title-big {
+    font-size: 5rem;
+    color: var(--red);
+    z-index: 6;
+    overflow: hidden;
+    position: absolute;
+    opacity: 7%;
+    display: flex;
+}
+
+.contact-title-big {
+  display: flex;
+  opacity: 7%;
+  font-size: 4.5rem;
+}
+
+.contact-content {
+  max-width: 600px;
+  margin: 4em auto 3em;
+}
+
+
+}
+
+
+@media only screen and (min-width: 1024px) {
+  .navbar {
+    font-size: 1.2rem;
+  }
+
+  .content {
+    font-size: 1.2rem;
+  }
+
+  .contact-content {
+    font-size: 1.2rem;
+  }
+
+}
+
+@media only screen and (min-width: 1150px) {
+
+  .button {
+	 cursor: pointer;
+	 position: relative;
+	 padding: 10px 15px;
+	 background: var(--red);
+	 font-size: 1.2rem;
+	 border-top-right-radius: 10px;
+	 border-bottom-left-radius: 10px;
+	 transition: all 1s;
+   
+}
+
+.button a {
+  color: var(--background);
+  padding: 9px 15px;
+}
+
+ .button:after, .button:before {
+	 content: " ";
+	 width: 10px;
+	 height: 10px;
+	 position: absolute;
+	 border: 0px solid #fff;
+	 transition: all 1s;
+}
+ .button:after {
+	 top: -1px;
+	 left: -1px;
+	 border-top: 4px solid var(--white);
+	 border-left: 4px solid var(--white);
+}
+ .button:before {
+	 bottom: -1px;
+	 right: -1px;
+	 border-bottom: 4px solid var(--white);
+	 border-right: 4px solid var(--white);
+}
+ .button:hover {
+	 border-top-right-radius: 0px;
+	 border-bottom-left-radius: 0px;
+}
+ .button:hover:before, .button:hover:after {
+	 width: 100%;
+	 height: 100%;
+}
+
+  .social-links ul {
+  display: flex;
+  position: absolute;
+  top: 85%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.social-links ul li {
+  list-style: none;
+}
+
+.social-links ul li a {
+  width: 80px;
+  height: 80px;
+  background-color: #fff;
+  text-align: center;
+  line-height: 70px;
+  font-size: 35px;
+  margin: 0 10px;
+  display: block;
+  border-radius: 50%;
+  position: relative;
+  overflow: hidden;
+  border: 3px solid #fff;
+  z-index: 1;
+}
+
+.social-links ul li a .icon {
+  position: relative;
+  color: #262626;
+  transition: .5s;
+  z-index: 3;
+  
+}
+
+.social-links ul li a:hover .icon {
+  color: #fff;
+  transform: rotateY(360deg);
+}
+
+.social-links ul li a:before {
+  content: "";
+  position: absolute;
+  top: 100%;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: #f00;
+  transition: .5s;
+  z-index: 2;
+}
+
+.social-links ul li a:hover:before {
+  top: 0;
+}
+
+.social-links ul li:nth-child(1) a:before{
+  background: var(--background);
+  color: var(--white);
+}
+
+.social-links ul li:nth-child(2) a:before{
+  background: #0077b5;
+}
+
+.social-links ul li:nth-child(3) a:before {
+  background: #DE1b85;
+}
+
+.github, .linkedin, .instagram {
+  background: transparent;
+}
+
+
 }
