--- a/styles.css
+++ b/styles.css
@@ -556,7 +556,7 @@ section#home {
    
 }
 
-.button a {
+/* .button a {
   color: var(--background);
   padding: 9px 15px;
 }
@@ -588,7 +588,7 @@ section#home {
  .button:hover:before, .button:hover:after {
 	 width: 100%;
 	 height: 100%;
-}
+} */
 
   .social-links ul {
   display: flex;
